# otus_basic_tasks

./: README.md
task2/source-12995-f8d6de/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example.cpp  hello_world  hello_world.cpp  move_me_out.cpp  move_me_out.hpp
task3/03.homework_source-12995-dca15c/: CMakeLists.txt  argument.cpp  check_value.cpp  high_scores.cpp  high_scores.hpp  high_scores.txt  random_value.cpp  random_value.hpp
task4/04.homework-345726-76bb84/: .clang-format  Ball.cpp  Ball.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Painter.cpp  Painter.hpp  Physics.cpp  Physics.hpp  Point.hpp  Velocity.hpp  World.cpp  World.hpp  main.cpp
task4/04.homework-345726-76bb84/black_box/: Application.cpp  Application.hpp  PainterImpl.cpp  PainterImpl.hpp  View.cpp  View.hpp
task4/04.homework-345726-76bb84/data/: elephant.txt  smile.txt
task5/05.homework/: CMakeLists.txt  chrono_example.cpp  random_shuffle.cpp  statistics.cpp
task6/: CMakeLists.txt  List.cpp  List.hpp  SeqContainer.cpp  SeqContainer.hpp  container.cpp
task7/: CMakeLists.txt  List.cpp  List.hpp  List.tpp  SeqContainer.hpp  SeqContainer.tpp  container.cpp
task7/gtests/: CMakeLists.txt  test_dll.cpp  tests.cpp
task8/: CMakeLists.txt  gutenberg.txt  topk_words-283624-6938d6.cpp
